--- a/.env.txt
+++ b/.env.txt
@@ -4,7 +4,7 @@ APP_KEY=base64:HwAb92qsjiv5aUOjoWIlAYHiE9rwV/+FugaN+NqeK+g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
